pi-cluster/deployments/rssmerge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rssmerge
  labels:
    app: rssmerge
  namespace: rssmerge
spec:
  type: ClusterIP
  selector:
    app: rssmerge
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
